--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "mx.utxj.ti.awos.bienesraices",
+  "name": "mx.edu.utxj.ti.awos.bienesraices",
   "version": "1.0.0",
   "description": "Proyecto de Clase para la Unidad 2, de la asinatura AWOS utilizando Node.js",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "saluda": "node saluda.js",
+    "server": "nodemon index.js" 
   },
   "repository": {
     "type": "git",
@@ -31,5 +32,8 @@
   "homepage": "https://github.com/MTI-MarcoRH/SD2024-BienesRaices_Matricula#readme",
   "dependencies": {
     "express": "^4.21.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.7"
   }
 }
